--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     repositories {
         mavenCentral()
         mavenLocal()
+        google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
