--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,12 @@ android {
     buildToolsVersion '26.0.2'
 
     defaultConfig {
-        applicationId "com.amazonaws.devicefarm.android.referenceapp"
+        applicationId "referenceapp"
         minSdkVersion 10
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.1"
+        setProperty("archivesBaseName", applicationId + "-" + versionName)
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
