gradle print versionname

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,12 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    task printVersionName {
+        doLast {
+            println android.defaultConfig.versionName
+        }
+    }
 }
 
 repositories {
